# dockrev

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  lefthook.yml  package-lock.json  package.json
.github/scripts/: compute-version.sh  label-gate.sh  release-intent.sh  smoke-test.sh
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  label-gate.yml  release.yml
crates/dockrev-api/: Cargo.toml  build.rs
crates/dockrev-api/src/: backup.rs  candidates.rs  compose.rs  compose_runner.rs  config.rs  db.rs  discovery.rs  docker_runner.rs  error.rs  github.rs  ids.rs  ignore.rs  main.rs  notify.rs  registry.rs  runner.rs  state.rs  ui.rs  updater.rs
crates/dockrev-api/src/api/: mod.rs  tests.rs  types.rs
crates/dockrev-supervisor/: Cargo.toml
crates/dockrev-supervisor/src/: app.rs  config.rs  docker_exec.rs  main.rs  state_store.rs
deploy/: Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  nginx.conf
docs/plan/: README.md
docs/plan/0001:dockrev-compose-updater/: PLAN.md
docs/plan/0001:dockrev-compose-updater/contracts/: README.md  cli.md  db.md  events.md  file-formats.md  http-apis.md
docs/plan/0001:dockrev-compose-updater/ui/: daisyui-theme.md  preview.html
docs/plan/0002:storybook-theme-switching/: PLAN.md
docs/plan/0002:storybook-theme-switching/contracts/: cli.md  file-formats.md
docs/plan/0003:release-automation-alignment/: PLAN.md
docs/plan/0003:release-automation-alignment/contracts/: cli.md  file-formats.md  http-apis.md
docs/plan/0004:auto-release-publish-image/: PLAN.md
docs/plan/0004:auto-release-publish-image/contracts/: README.md  file-formats.md
docs/plan/0005:github-actions-performance/: PLAN.md
docs/plan/0005:github-actions-performance/contracts/: README.md  file-formats.md
docs/plan/0006:release-intent-label-gating/: PLAN.md
docs/plan/0006:release-intent-label-gating/contracts/: README.md  cli.md  file-formats.md
docs/plan/0007:dockrev-compose-auto-discovery/: PLAN.md
docs/plan/0007:dockrev-compose-auto-discovery/contracts/: config.md  db.md  http-apis.md
docs/plan/0007:dockrev-compose-auto-discovery/ui/: preview.html
docs/plan/0009:fix-overview-services-count/: PLAN.md
docs/plan/0009:fix-overview-services-count/contracts/: README.md  http-apis.md
docs/plan/0010:no-default-ports/: PLAN.md
docs/plan/0010:no-default-ports/contracts/: README.md  cli.md  config.md
docs/plan/0011:bun-migration/: PLAN.md
docs/plan/0011:bun-migration/contracts/: README.md  cli.md  file-formats.md
docs/plan/0012:update-buttons-self-upgrade/: PLAN.md
docs/plan/0012:update-buttons-self-upgrade/contracts/: README.md  cli.md  config.md  file-formats.md  http-apis.md  ui.md
docs/plan/0012:update-buttons-self-upgrade/ui/: README.md
docs/plan/0013:release-supervisor-assets/: PLAN.md
docs/plan/0013:release-supervisor-assets/contracts/: README.md  file-formats.md
docs/plan/0014:cleanup-actions-artifacts/: PLAN.md
docs/plan/a2zdt:supervisor-route-failsafe/: PLAN.md
docs/plan/hkr8b:github-package-webhook-registration/: PLAN.md
docs/plan/hkr8b:github-package-webhook-registration/contracts/: README.md  db.md  events.md  http-apis.md
docs/plan/kcxtp:fix-image-exec-permission/: PLAN.md
docs/plan/kcxtp:fix-image-exec-permission/contracts/: file-formats.md
docs/plan/zdg25:auto-version-inference-ui/: PLAN.md
docs/plan/zdg25:auto-version-inference-ui/contracts/: db.md  http-apis.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/.storybook/: main.ts  preview.ts  test-runner.ts
web/public/: sw.js
web/scripts/: capture-storybook-screenshots.mjs  storybook-daemon.mjs  storybook-dev.mjs  test-storybook.mjs
web/src/: App.css  App.tsx  ConfirmProvider.tsx  Shell.tsx  api.ts  confirm.ts  confirm.tsx  index.css  routes.ts  runtimeConfig.ts  theme.ts  ui.tsx  updateStatus.ts  useRoute.ts  useSupervisorHealth.ts
web/src/components/: UpdateCandidateFilters.tsx  UpdateTargetSelect.tsx
web/src/pages/: OverviewPage.tsx  QueuePage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx  SettingsPage.tsx  SupervisorMisroutePage.tsx
web/src/stories/components/: Button.stories.tsx  Chip.stories.tsx  ConfirmDialog.stories.tsx  Pill.stories.tsx  StatusRemark.stories.tsx  Switch.stories.tsx  Typography.stories.tsx  UpdateCandidateFilters.stories.tsx  UpdateTargetSelect.stories.tsx
web/src/stories/layouts/: AppShell.stories.tsx
web/src/stories/mocks/: PageHarness.tsx  dockrevMockApi.ts  withDockrevMockApi.ts
web/src/stories/pages/: InteractiveApp.stories.tsx  OverviewPage.stories.tsx  QueuePage.stories.tsx  ServiceDetailPage.stories.tsx  ServicesPage.stories.tsx  SettingsPage.stories.tsx
