[package]
name = "dockrev"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]

