[package]
name = "dockrev-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dockrev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
include_dir = "0.7"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "rustls-native-certs"] }
mime_guess = "2"
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
url = "2"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
