[package]
name = "dockrev-supervisor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dockrev-supervisor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

